Fix navbar menu visibility with proper background
Updated navbar styling to ensure menu items are always visible:
- Added !important flags to enforce background colors
- Set white-ish background for navbar-collapse (mobile menu)
- Styled navbar-toggler icon in dark grey
- Added background color for fixed and visible navbar states
- Ensured dark grey text is visible against light backgrounds

This fixes the issue where menu fonts were white and invisible
against light backgrounds.

--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -31,22 +31,43 @@ body {
 }
 
 #mainNav {
-  background-color: $white-ish;
+  background-color: $white-ish !important;
 
   .navbar-brand {
-    color: $dark-grey;
+    color: $dark-grey !important;
 
     &:hover {
-      color: $lime-green;
+      color: $lime-green !important;
     }
   }
 
+  .navbar-toggler {
+    border-color: $dark-grey;
+
+    .fa-bars {
+      color: $dark-grey;
+    }
+  }
+
+  .navbar-collapse {
+    background-color: $white-ish;
+  }
+
   .nav-link {
-    color: $dark-grey;
+    color: $dark-grey !important;
 
     &:hover {
-      color: $lime-green;
+      color: $lime-green !important;
     }
+  }
+
+  // Ensure navbar stays visible on scroll
+  &.is-fixed {
+    background-color: $white-ish !important;
+  }
+
+  &.is-visible {
+    background-color: $white-ish !important;
   }
 }
 
